[tool.poetry]
name = "hippodb"
version = "0.1.0"
description = ""
authors = ["Ohin Taylor <kazani@kazani.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
orjson = "^3.10.3"
jinja2 = "^3.1.4"
uvicorn = "^0.29.0"
dataclasses-json = "^0.6.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
